ProjetCompil/Verif/Test/fail/typeNonCompatible15.cas
program
	A : array [1..14] of integer;
	B : real;
	C : 1..10;
begin
	C := B / A;
end.
	
